# flib_client

./: CMakeLists.txt  README.md
forward/api/: ChatItemModel.cpp  MessageItemModel.cpp  MessageItemModel.hpp  MessageModel.cpp  MessageModel.hpp
forward/client/: Localisation.cpp  Localisation.hpp  Localization.cpp  Localization.hpp  Settings.cpp  Settings.hpp  Style.cpp  Style.hpp
